--- a/www/index.html
+++ b/www/index.html
@@ -30,22 +30,89 @@
 <nav>
     <a class="menu" href="index.html" id="active" title="Zpět">Zpět na white-bear</a>
 </nav>
-<main id="birdPage">
-    <menu class="birdFilter">
+<main id="birdPage" class="center">
+    <menu id="birdFilter">
         <h2>Filtr</h2>
-        Checkboxes with colors separated by bodypart.
+        <div class="menuPart">
+            <h3>Zobák</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
+        </div>
         <div class="menuPart">
             <h3>Hlava</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
+        </div>
+        <div class="menuPart">
+            <h3>Hruď</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
         </div>
         <div class="menuPart">
             <h3>Křídla</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
         </div>
         <div class="menuPart">
             <h3>Záda</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
+        </div>
+        <div class="menuPart">
+            <h3>Ocas</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
+        </div>
+        <div class="menuPart">
+            <h3>Nohy</h3>
+            <form>
+                <input type="checkbox" id="červená" name="červená_h" value="červená"><label for="červená_h">červená</label><br>
+                <input type="checkbox" id="modrá" name="modrá_h" value="modrá"><label for="modrá_h">modrá</label><br>
+                <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
+                <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
+                <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+            </form>
         </div>
     </menu>
-    <article class="birdPage">
-        
-    </article>
+    
+    <output for="birdFilter" name="searchResults">
+        <div class="birdCard">
+            <a href="images/ptaci/alka_malá/alka_malá.jpg" title="Alka malá"><img width="250px" alt="Alka malá" src="images/ptaci/alka_malá/alka_malá.jpg"/></a>
+            <details>
+                <summary>Barvy</summary>
+                <p>Černá, bílá</p>
+            </details>
+        </div>
+    </output>
 </main>
 </body></html>
