--- a/www/index.html
+++ b/www/index.html
@@ -103,6 +103,31 @@
                 <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
             </form>
         </div>
+        <div class="menuAttrs">
+            <div class="menuPart">
+            <h3>Velikost</h3>
+            <form>
+                <input type="checkbox" id="kos" name="kos_h" value="kos"><label for="kos_h">kos</label><br>
+                <input type="checkbox" id="sýkorka" name="sýkorka_h" value="sýkorka"><label for="sýkorka_h">sýkorka</label><br>
+                <input type="checkbox" id="hrdlička" name="hrdlička_h" value="hrdlička"><label for="hrdlička_h">hrdlička</label><br>
+            </form>
+        </div>
+        <div class="menuPart">
+            <h3>Typ</h3>
+            <form>
+                <input type="checkbox" id="dravec" name="dravec_h" value="dravec"><label for="dravec_h">dravec</label><br>
+                <input type="checkbox" id="vodní" name="vodní_h" value="vodní"><label for="vodní_h">vodní</label><br>
+                <input type="checkbox" id="lesní" name="lesní_h" value="lesní"><label for="lesní_h">lesní</label><br>
+                <input type="checkbox" id="polní" name="polní_h" value="polní"><label for="polní_h">polní</label><br>
+            </form>
+        </div>
+        <div class="menuPart">
+            <h3>Kropenatost</h3>
+            <form>
+                <input type="checkbox" id="ano" name="ano_h" value="ano"><label for="ano_h">ano</label><br>
+            </form>
+        </div>
+        </div>
     </menu>
     
     <output for="birdFilter" name="searchResults">
