improve bird card

--- a/www/index.html
+++ b/www/index.html
@@ -91,6 +91,7 @@
                 <input type="checkbox" id="zelená" name="zelená_h" value="zelená"><label for="zelená_h">zelená</label><br>
                 <input type="checkbox" id="černá" name="černá_h" value="černá"><label for="černá_h">černá</label><br>
                 <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
+                <input type="checkbox" id="fialová" name="fialová_h" value="fialová"><label for="fialová_h">fialová</label><br>
             </form>
         </div>
         <div class="menuPart">
@@ -103,40 +104,44 @@
                 <input type="checkbox" id="hnědá" name="hnědá_h" value="hnědá"><label for="hnědá_h">hnědá</label><br>
             </form>
         </div>
-        <div class="menuAttrs">
-            <div class="menuPart">
-            <h3>Velikost</h3>
-            <form>
-                <input type="checkbox" id="kos" name="kos_h" value="kos"><label for="kos_h">kos</label><br>
-                <input type="checkbox" id="sýkorka" name="sýkorka_h" value="sýkorka"><label for="sýkorka_h">sýkorka</label><br>
-                <input type="checkbox" id="hrdlička" name="hrdlička_h" value="hrdlička"><label for="hrdlička_h">hrdlička</label><br>
-            </form>
-        </div>
         <div class="menuPart">
-            <h3>Typ</h3>
-            <form>
-                <input type="checkbox" id="dravec" name="dravec_h" value="dravec"><label for="dravec_h">dravec</label><br>
-                <input type="checkbox" id="vodní" name="vodní_h" value="vodní"><label for="vodní_h">vodní</label><br>
-                <input type="checkbox" id="lesní" name="lesní_h" value="lesní"><label for="lesní_h">lesní</label><br>
-                <input type="checkbox" id="polní" name="polní_h" value="polní"><label for="polní_h">polní</label><br>
-            </form>
-        </div>
-        <div class="menuPart">
-            <h3>Kropenatost</h3>
-            <form>
-                <input type="checkbox" id="ano" name="ano_h" value="ano"><label for="ano_h">ano</label><br>
-            </form>
-        </div>
-        </div>
+        <h3>Velikost</h3>
+        <form>
+            <input type="checkbox" id="kos" name="kos_h" value="kos"><label for="kos_h">kos</label><br>
+            <input type="checkbox" id="sýkorka" name="sýkorka_h" value="sýkorka"><label for="sýkorka_h">sýkorka</label><br>
+            <input type="checkbox" id="hrdlička" name="hrdlička_h" value="hrdlička"><label for="hrdlička_h">hrdlička</label><br>
+        </form>
+    </div>
+    <div class="menuPart">
+        <h3>Typ</h3>
+        <form>
+            <input type="checkbox" id="dravec" name="dravec_h" value="dravec"><label for="dravec_h">dravec</label><br>
+            <input type="checkbox" id="vodní" name="vodní_h" value="vodní"><label for="vodní_h">vodní</label><br>
+            <input type="checkbox" id="lesní" name="lesní_h" value="lesní"><label for="lesní_h">lesní</label><br>
+            <input type="checkbox" id="polní" name="polní_h" value="polní"><label for="polní_h">polní</label><br>
+        </form>
+    </div>
+    <div class="menuPart">
+        <h3>Kropenatost</h3>
+        <form>
+            <input type="checkbox" id="ano" name="ano_h" value="ano"><label for="ano_h">ano</label><br>
+        </form>
+    </div>
     </menu>
     
     <output for="birdFilter" name="searchResults">
         <div class="birdCard">
+            <h4>Alka malá (Alca torda)</h4>
             <a href="images/ptaci/alka_malá/alka_malá.jpg" title="Alka malá"><img width="250px" alt="Alka malá" src="images/ptaci/alka_malá/alka_malá.jpg"/></a>
             <details>
-                <summary>Barvy</summary>
-                <p>Černá, bílá</p>
+                <summary>Popis</summary>
+                <p>Hlava: Černá, bílá</p>
+                <p>Křídla: černá, bílá</p>
             </details>
+            <a class="birdLink" href="https://avibase.bsc-eoc.org/species.jsp?avibaseid=64F4DD81371B269F" title="Celosvětová databáze">Avibase</a>
+            <a class="birdLink" href="http://www.birdphoto.cz/?lang=cz&sc_lang=cz&action=select&cat_id=1&subcat_id=&author_id=&sort_id=669" title="birdphoto">Birdphoto</a>
+            <a class="birdLink" href="https://cs.wikipedia.org/wiki/Alka_mal%C3%A1" title="Wikipedie">Wikipedie</a>
+            <h6>Poznámka:</h6>
         </div>
     </output>
 </main>
