--- a/Skripty/template.html
+++ b/Skripty/template.html
@@ -87,6 +87,9 @@
     </menu>
     
     <output for="birdFilter" name="searchResults">
+        <div class="birdCard">
+            <h4>Nic nenalezeno</h4>
+            <img alt="Nic nenalezeno" height=200px src=images/neznámý_pták/feather.png></div>
     </output>
 </main>
 </body></html>
