--- a/Skripty/template.html
+++ b/Skripty/template.html
@@ -84,6 +84,7 @@
             <input type="checkbox" id="spotted_box" name="spotted_h" value="ano"><label for="spotted_box">ano</label><br>
         </form>
     </div>
+         <button type="button">Vymazat</button>
     </menu>
     
     <output for="birdFilter" name="searchResults">
