--- a/Skripty/template.html
+++ b/Skripty/template.html
@@ -88,9 +88,10 @@
     </menu>
     
     <output for="birdFilter" name="searchResults">
-        <div class="birdCard">
+        <div class="notFound hidden">
             <h4>Nic nenalezeno</h4>
-            <img alt="Nic nenalezeno" height=200px src=images/neznámý_pták/feather.png></div>
+            <img alt="Nic nenalezeno" height=200px src=images/neznámý_pták/feather.png>
+        </div>
     </output>
 </main>
 </body></html>
