--- a/Skripty/template.html
+++ b/Skripty/template.html
@@ -85,7 +85,7 @@
             <input type="checkbox" id="spotted_box" name="spotted_bird" value="ano" onchange="onFilter()"><label for="spotted_box">ano</label><br>
         </form>
     </div>
-         <button id="clearButton" onclick="clearFilter()" type="button">Vymazat</button>
+         <button id="clearButton" onclick="clearFilter()" type="button">Zobrazit vše</button>
     </menu>
     
     <output for="birdFilter" name="searchResults">
