Add unspecified options

--- a/Skripty/template.html
+++ b/Skripty/template.html
@@ -82,7 +82,7 @@
     <div class="menuPart" id="spotted">
         <h3>Kropenatost</h3>
         <form>
-            <input type="radio" id="spotted_none" name="spotted_bird" value="ano" onchange="onFilter()"><label for="spotted_none">neurčeno</label><br>
+            <input type="radio" id="spotted_neurčeno" name="spotted_bird" value="ano" onchange="onFilter()"><label for="spotted_neurčeno">neurčeno</label><br>
             <input type="radio" id="spotted_ano" name="spotted_bird" value="ano" onchange="onFilter()"><label for="spotted_ano">ano</label><br>
             <input type="radio" id="spotted_ne" name="spotted_bird" value="ano" onchange="onFilter()"><label for="spotted_ne">ne</label><br>
         </form>
